<resources>
    <string name="app_name">QQchannels</string>
    <string name="title_channels">频道</string>
    <string name="title_contacts">联系人</string>
    <string name="title_notifications">消息</string>
    <string name="title_world">小世界</string>
    <string name="title_go">动态</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>